# particle_simulation

./: CMakeLists.txt  README.md  package.xml
include/particle_simulation/: particle.hpp  particle_manager.hpp
launch/: simulation.launch
react_component/: index.ts  package.json  tsconfig.json
react_component/src/: App.css  App.tsx
react_component/src/components/: Particle.ts  ParticleManager.ts  ParticleSimulation.tsx
src/: main.cpp  particle.cpp  particle_manager.cpp
